force-app/main/default/objects/Stage_SLA__mdt/Stage_SLA__mdt.object-meta.xml
<CustomObject>
    <label>Stage SLA</label>
    <pluralLabel>Stage SLA</pluralLabel>
</CustomObject>