force-app/main/default/objects/Stage_SLA__mdt/fields/SAL_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SAL_Minutes__c</fullName>
    <label>SLA Minutes</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>