force-app/main/default/objects/Stage_SLA__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Stage__c</columns>
    <columns>SAL_Minutes__c</columns>
    <columns>Expiration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>